Fix padding on mobile

--- a/src/components/featuresSummary.module.css
+++ b/src/components/featuresSummary.module.css
@@ -3,13 +3,29 @@
 }
 
 .container {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-left: 20px;
+    padding-right: 20px;
     max-width: 1100px;
 }
 
+@media screen and (min-width: 701px) {
+    .container {
+        padding-top: 100px;
+        padding-bottom: 100px;
+    }
+}
+
+/* smaller screens less space between components */
+@media screen and (max-width: 700px) {
+    .container {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+}
+
+
 .text {
-    max-width: 40%;
+    max-width: 500px;
     margin-bottom: 20px;
 }
 
