--- a/src/components/maintenanceFeatures.module.css
+++ b/src/components/maintenanceFeatures.module.css
@@ -1,7 +1,22 @@
 .section-with-background-color {
     background-color: #F4F3F0;
-    padding-top: 150px;
-    padding-bottom: 100px;
+    
+}
+
+
+@media screen and (min-width: 701px) {
+    .section-with-background-color {
+        padding-top: 150px;
+        padding-bottom: 100px;
+    }
+}
+
+/* smaller screens less space between components */
+@media screen and (max-width: 700px) {
+    .section-with-background-color {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
 }
 
 .section {
