--- a/src/components/mobileCheckinFeatures.module.css
+++ b/src/components/mobileCheckinFeatures.module.css
@@ -1,12 +1,31 @@
 .section {
-    margin-top: 100px;
-    margin-bottom: 50px;
     max-width: 1100px;
 }
 
+
+@media screen and (min-width: 701px) {
+    .section {
+        margin-top: 100px;
+        margin-bottom: 50px;
+    }
+}
+
+/* smaller screens less space between components */
+@media screen and (max-width: 700px) {
+    .section {
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
+
+    .feature-col {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
+
 .heading {
-    padding-left: 40px;
-    padding-right: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 .image {
@@ -23,9 +42,14 @@
 }
 
 .push-messages-text {
+    padding-left: 30px;
+    padding-right: 30px;
     max-width: 400px;
     margin-left: auto;
     margin-right: auto;
+    font-size: 1rem;
+    font-family: 'poppins';
+    font-weight: 400;
 }
 
 .push-messages-title {
@@ -33,12 +57,6 @@
     padding-top: 40px;
     padding-bottom: 10px;
     font-weight: 500;
-}
-
-.push-messages-text {
-    font-size: 1rem;
-    font-family: 'poppins';
-    font-weight: 400;
 }
 
 .features-row {
