--- a/src/components/paperworkFeatures.module.css
+++ b/src/components/paperworkFeatures.module.css
@@ -1,7 +1,25 @@
 .section {
-    margin-top: 100px;
-    margin-bottom: 50px;
     max-width: 1100px;
+}
+
+@media screen and (min-width: 701px) {
+    .section {
+        margin-top: 100px;
+        margin-bottom: 50px;
+    }
+}
+
+/* smaller screens less space between components */
+@media screen and (max-width: 700px) {
+    .section {
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
+
+    .features-row {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 }
 
 .heading-row {
@@ -62,6 +80,8 @@
     margin-right: auto;
     margin-bottom: 0;
 }
+
+
 
 .feature-col {
     max-width: 400px;
